fea-rs/test-data/compile-tests/mini-latin/bad/aalt_script_statement.fea
feature aalt {
    # script statements are not allowed in aalt
    script latn;
} aalt;
